Applied review suggestions